--- a/client/crowd-funding/public/index.html
+++ b/client/crowd-funding/public/index.html
@@ -31,7 +31,7 @@
         font-family: "Montserrat", sans-serif;
       }
     </style>
-    <title>React App</title>
+    <title>Crowdfunding</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
