--- a/client/crowd-funding/public/index.html
+++ b/client/crowd-funding/public/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/x-icon" href="Happy.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
@@ -31,7 +32,7 @@
         font-family: "Montserrat", sans-serif;
       }
     </style>
-    <title>Crowdfunding</title>
+    <title>Happy Fund - Crowdfunding</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
